created / event listener

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <div id="search-container">
         <input type="text" id="cryptoInput" placeholder="Enter crypto symbol (e.g., BTC, ETH)">
         <button onclick="addCryptoColumn()">Add</button>
+        <div id="suggestions-list"></div>
+
     </div>
     </div>    
 
