created a less intrustive error message

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id="cryptoInput" placeholder="Enter crypto symbol (e.g., BTC, ETH)">
         <button onclick="addCryptoColumn()">Add</button>
         <div id="suggestions-list"></div>
+        <p id="error-message" style="color: red; display: none;"></p> <!-- Error message -->
 
     </div>
     </div>    
